# collator

./: pyproject.toml
src/collator/: __init__.py  main.py
tests/test1/: params.yaml  script.py
